changed timestamp to get hours and minutes

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,7 +41,7 @@ jobs:
         shell: bash
         run: |
           # Generate a timestamp for creating an image version history
-          TIMESTAMP="$(date +%Y%m%d)"
+          TIMESTAMP="$(date +%Y%m%d%H%M)"
           COMMIT_TAGS=()
           BUILD_TAGS=()
 
